[project]
name = "joy_caption_two_pixelailabs"
description = "A fully automated ComfyUI custom node that uses Joy Caption Alpha Two to generate high-quality image captions. Perfect for: LoRA/model training dataset preparation, Image tagging and organization, NSFW content captioning, Batch processing large image collections"
version = "1.0.0"
license = {file = "LICENSE"} 
# classifiers = [
#     # For OS-independent nodes (works on all operating systems)
#     "Operating System :: OS Independent",
#
#     # OR for OS-specific nodes, specify the supported systems:
#     "Operating System :: Microsoft :: Windows",  # Windows specific
#     "Operating System :: POSIX :: Linux",  # Linux specific
#     "Operating System :: MacOS",  # macOS specific
#
#     # GPU Accelerator support. Pick the ones that are supported by your extension.
#     "Environment :: GPU :: NVIDIA CUDA",    # NVIDIA CUDA support
#     "Environment :: GPU :: AMD ROCm",       # AMD ROCm support
#     "Environment :: GPU :: Intel Arc",      # Intel Arc support
#     "Environment :: NPU :: Huawei Ascend",  # Huawei Ascend support
#     "Environment :: GPU :: Apple Metal",    # Apple Metal support
# ]

dependencies = ["transformers>=4.44.0", "torch>=2.0.0", "pillow>=10.0.0", "numpy>=1.24.0", "accelerate>=0.25.0", "bitsandbytes>=0.43.0", "sentencepiece>=0.1.99", "protobuf>=3.20.0", "huggingface_hub>=0.20.0", "hf_xet>=0.3.0"]

[project.urls]
Repository = "https://github.com/Pixelailabs/Joy_Caption_Two_PixelaiLabs"
#  Used by Comfy Registry https://registry.comfy.org
Documentation = "https://github.com/Pixelailabs/Joy_Caption_Two_PixelaiLabs/wiki"
"Bug Tracker" = "https://github.com/Pixelailabs/Joy_Caption_Two_PixelaiLabs/issues"

[tool.comfy]
PublisherId = ""
DisplayName = "Joy_Caption_Two_PixelaiLabs"
Icon = ""
includes = [] 
# "requires-comfyui" = ">=1.0.0"  # ComfyUI version compatibility

